<resources>
    <string name="app_name" translatable="false">Bills</string>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="menu_list_bills">Bills</string>
    <string name="menu_analytics">Analytics</string>
    <string name="menu_shopping_list">Shopping list</string>
    <string name="menu_settings">Settings</string>
    <string name="bills_list_income">Income</string>
    <string name="bill_list_expense">Expense</string>
    <string name="bill_list_total">Total</string>
    <string name="bills_list_null_0_0">0.00</string>
    <string name="month">Month</string>
    <string name="description_previous_month">previous month</string>
    <string name="description_next_month">next month</string>
    <string name="description_filter">filter</string>
    <string name="description_search">search</string>
    <string name="description_bookmarks">bookmarks</string>
    <string name="description_add_new_bill">add new bill</string>
    <string name="item_note">Note</string>
    <string name="title_date_time">Date/time</string>
    <string name="title_category">Category</string>
    <string name="title_amount">Amount</string>
    <string name="title_note">Note</string>
    <string name="title_date">Date</string>
    <string name="title_time">Time</string>
    <string name="title_description">Description</string>
    <string name="add_apply">Apply</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="title_add">add</string>
    <string name="take_photo">Take  a Photo</string>
    <string name="start_capture">Start Capture</string>
    <string name="stop_capture">Stop Capture</string>
    <string name="saved_bookmark">Bookmark is saved</string>
    <string name="unsaved_bookmark">Bookmark is unsaved</string>
    <string name="toast_fill_amount">Please fill Amount gap</string>
    <string name="toast_fill_category">Please fill Category gap</string>
    <string name="toast_fill_both_gaps">Please fill Amount and Category gaps</string>
    <string name="Error_incorrect_typeOfBill">AddBillFragment: Incorrect type of bill</string>
    <string name="title_bookmarks">Bookmarks</string>
    <string name="Wrong_entrence_type">AddBillFragment: Wrong type of entrance</string>
    <string name="attention_mookmark_notfoundType">BookmarksAdapter: Not found type of bill</string>
    <string name="title_desc_date">Desc/ascent</string>
    <string name="title_search">Search</string>
    <string name="title_new_bill">New bill</string>
    <string name="amount_min">Min.</string>
    <string name="search_amount_separete">..-..</string>
    <string name="amount_max">Max.</string>
    <string name="title_period">Period</string>
    <string name="search_choose_category">Choose category</string>
    <string name="search_cancel">Cancel</string>
    <string name="ChooseCategoryDialog_error_null">ChooseCategoryDialog: Activity cannot be null</string>
    <string name="type_new_category">Type new Category</string>
    <string name="no_values_analytics">No values</string>
    <string name="add_note_with_microphone">Add note with microphone</string>
    <string name="choose_type_of_add_note">Choose type of add note</string>
    <string name="add_note_with_keyboard">add note with keyboard</string>
    <string name="type_note">Type note...</string>
    <string name="b_delete_note">delete</string>
    <string name="b_save_note">save</string>
    <string name="attention_billsAdapter_notfoundType">BillsAdapter: Not found type of bill</string>
    <string name="title_dialog_rec_listener">Listening...</string>
    <string name="dialog_title_save_image">Save image</string>
    <string name="dialog_message_save_dialog">Do you want to Save image?</string>
    <string name="dialog_title_delete_image">Delete Image</string>
    <string name="dialog_message_delete_dialog">Do you want to Delete image?</string>
    <string name="themes_title">Themes:</string>
    <string name="calendar_January">January</string>
    <string name="calendar_february">February</string>
    <string name="calendar_march">March</string>
    <string name="calendar_april">April</string>
    <string name="calendar_may">May</string>
    <string name="calendar_june">June</string>
    <string name="calendar_july">July</string>
    <string name="calendar_august">August</string>
    <string name="calendar_september">September</string>
    <string name="calendar_october">October</string>
    <string name="calendar_november">November</string>
    <string name="calendar_december">December</string>
    <string name="language">Language:</string>
    <string name="currency">Currency:</string>
    <string name="code_currency">Code</string>
    <string name="symbol_currency">Symbol</string>
    <string name="dialog_title_change_lang">Change language</string>
    <string name="dialog_message_change_lang_dialog">Do you want to change language?</string>
    <string name="button_yes">Yes</string>
    <string name="dialog_title_delete_Bills">Delete Bills</string>
    <string name="dialog_message_delete_bills">Do you want to delete Bills?</string>
    <string name="settings_backup_database">Backup database:</string>
    <string name="settings_export_db">Export DB</string>
    <string name="settings_import_db">Import DB</string>
    <string name="settings_send_db_to_e_mail">send DB to e-mail</string>
    <string name="dialog_title_export_db">Export database</string>
    <string name="dialog_message_export_db">Do you want to export the database to storage?</string>
    <string name="button_ok">Ok</string>
    <string name="dialog_message_finish_export"><![CDATA[Database is located in the folder Download -> bills_database]]></string>
    <string name="dialog_title_import_db">Import database</string>
    <string name="dialog_message_import_db">If you import database, you will permanently lose the current information. Would you like to continue?</string>
    <string name="dialog_message_finish_import">Database loaded</string>
    <string name="button_restart">Restart Application</string>
    <string name="error_nameDb_import">File has wrong name</string>
    <string name="emailDescription1">1. Download the bills_database.sqlite file on your storage.</string>
    <string name="emailDescription2"><![CDATA[2. BillsApp -> Settings -> Import DB, and choose the file.]]></string>
    <string name="dialog_message_finish_export_excel"><![CDATA[Excel is saved in the folder Download -> bills_database]]></string>
    <string name="dialog_title_export_db_excel">Export data to Excel</string>
    <string name="dialog_message_export_db_excel">Do you want to Export data in Excel file to storage?</string>
    <string name="bSettings_ExportToExcel">Export to Excel</string>
    <string name="title_excel">Excel:</string>
    <string name="edit">Edit</string>
    <string name="back_to_set_type_bill">Back to set type bill</string>
</resources>