<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.shopList.ShopListFragment"
    android:id="@+id/shopListFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recView_shopList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:listitem="@layout/note_item" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_addNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:elevation="0sp"
        android:stateListAnimator="@null"
        android:contentDescription="@string/choose_type_of_add_note"
        android:src="@drawable/ic_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="24sp"
        android:layout_marginBottom="24sp"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_addNote_micro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/add_note_with_microphone"
        android:src="@drawable/ic_mic"
        app:layout_constraintBottom_toTopOf="@id/button_addNote"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="25sp"
        android:layout_marginBottom="5sp"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_addNote_keyboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/add_note_with_keyboard"
        android:src="@drawable/ic_keyboard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_addNote"
        android:layout_marginEnd="5sp"
        android:layout_marginBottom="24sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>