<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.settings.SettingsFragment"
    android:id="@+id/settingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <ProgressBar
        android:id="@+id/progressBar_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:indeterminate="true"
        android:minWidth="200dp"
        android:minHeight="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/themes_title"
        android:layout_marginStart="10sp"
        android:layout_marginTop="5sp"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/im_light_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_light_theme"
        app:layout_constraintBottom_toBottomOf="@+id/switchTheme"
        app:layout_constraintStart_toStartOf="@+id/tv_theme"
        app:layout_constraintTop_toTopOf="@+id/switchTheme" />

    <Switch
        android:id="@+id/switchTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_theme"
        app:layout_constraintStart_toEndOf="@+id/im_light_theme"
        app:layout_constraintTop_toBottomOf="@+id/tv_theme"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <ImageView
        android:id="@+id/im_night_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:src="@drawable/ic_night_theme"
        app:layout_constraintBottom_toBottomOf="@+id/switchTheme"
        app:layout_constraintStart_toEndOf="@+id/switchTheme"
        app:layout_constraintTop_toTopOf="@+id/switchTheme" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="70sp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="140dp" />

    <TextView
        android:id="@+id/tv_settings_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/language"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchTheme" />

    <Button
        android:id="@+id/b_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:layout_marginTop="5sp"
        android:text="@string/language"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_language"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_settings_language" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="210dp" />

    <Spinner
        android:id="@+id/spinner_currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_currency"
        app:layout_constraintEnd_toStartOf="@+id/radioGroup_settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_settings_title_currency" />

    <TextView
        android:id="@+id/tv_settings_title_currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/currency"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b_language" />

    <RadioGroup
        android:id="@+id/radioGroup_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginEnd="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/spinner_currency"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/spinner_currency"
        app:layout_constraintTop_toTopOf="@+id/spinner_currency">

        <RadioButton
            android:id="@+id/rb_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/code_currency"
            android:textSize="11sp" />

        <RadioButton
            android:id="@+id/rb_symbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/symbol_currency"
            android:textSize="11sp" />
    </RadioGroup>

        <androidx.compose.ui.platform.ComposeView
            android:id="@+id/compose_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup_settings"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>